NetBSD Problem Report #55532

From www@netbsd.org  Sun Aug  2 19:03:53 2020
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id A66721A9217
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  2 Aug 2020 19:03:53 +0000 (UTC)
Message-Id: <20200802190352.ACC5C1A923A@mollari.NetBSD.org>
Date: Sun,  2 Aug 2020 19:03:52 +0000 (UTC)
From: coypu@sdf.org
Reply-To: coypu@sdf.org
To: gnats-bugs@NetBSD.org
Subject: kernel panic with ena on AWS a1.2xlarge
X-Send-Pr-Version: www-1.0

>Number:         55532
>Category:       port-arm
>Synopsis:       kernel panic with ena on AWS a1.2xlarge
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    port-arm-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Aug 02 19:05:00 +0000 2020
>Closed-Date:    Tue Aug 11 17:47:51 +0000 2020
>Last-Modified:  Tue Aug 11 17:47:51 +0000 2020
>Originator:     coypu
>Release:        NetBSD 9.99.69
>Organization:
>Environment:
NetBSD 9.99.69 (GENERIC64) #0: Fri Jul 31 20:08:08 UTC 2020
>Description:
[ 7463.6321023] panic: mbuf 0xffff000068ea8290 already freed
[ 7463.6321023] cpu0: Begin traceback...
[ 7463.6321023] trace fp ffffc0014dc17850
[ 7463.6321023] fp ffffc0014dc17870 vpanic() at ffffc000004b8884 netbsd:vpanic+0x15c
[ 7463.6321023] fp ffffc0014dc178e0 panic() at ffffc000004b897c netbsd:panic+0x44
[ 7463.6321023] fp ffffc0014dc17970 m_free() at ffffc000004e7620 netbsd:m_free+0x98
[ 7463.6321023] fp ffffc0014dc17990 m_freem.part.7() at ffffc000004e83f0 netbsd:m_freem.part.7+0x8
[ 7463.6321023] fp ffffc0014dc179a0 ena_tx_cleanup() at ffffc000000de2a4 netbsd:ena_tx_cleanup+0xfc
[ 7463.6321023] fp ffffc0014dc17a70 ena_handle_msix() at ffffc000000de644 netbsd:ena_handle_msix+0x8c
[ 7463.6321023] fp ffffc0014dc17ae0 pic_dispatch() at ffffc00000002814 netbsd:pic_dispatch+0xa4
[ 7463.6321023] fp ffffc0014dc17b10 gicv3_irq_handler() at ffffc00000006c44 netbsd:gicv3_irq_handler+0xe4
[ 7463.6321023] fp ffffc0014dc17b80 interrupt() at ffffc0000008d03c netbsd:interrupt+0x2c
[ 7463.6321023] tf ffffc0014dc17ba0 el1_trap() at ffffc0000008a7d8 netbsd:el1_trap
[ 7463.6321023] ---- trapframe 0xffffc0014dc17ba0 (304 bytes) ----
[ 7463.6321023]     pc=ffffc0000008a868,   spsr=0000000020000005
[ 7463.6321023]    esr=000000009200004f,    far=0000f9a332ac0036
[ 7463.6321023]     x0=0000000000000001,     x1=00000000fffffffe
[ 7463.6321023]     x2=0000000000000000,     x3=0000000000000000
[ 7463.6321023]     x4=ffffc00000c2ec5c,     x5=0000000000000005
[ 7463.6321023]     x6=0000000000000005,     x7=00000000000000ab
[ 7463.6321023]     x8=ffffc00000c2e880,     x9=0000000000000001
[ 7463.6321023]    x10=0000f9a332e3d000,    x11=0000f9a332de06c0
[ 7463.6321023]    x12=0000000000f6d070,    x13=00000000010d0668
[ 7463.6321023]    x14=0000000000000024,    x15=0000f9a332e55888
[ 7463.6321023]    x16=0000f9a3328008c0,    x17=0000f9a332dd7120
[ 7463.6321023]    x18=0000f9a332e4bd3a,    x19=0000fffffff6c3c0
[ 7463.6321023]    x20=0000fffffff6c2d0,    x21=0000f9a332d6dc10
[ 7463.6321023]    x22=0000000080000000,    x23=000000009200004f
[ 7463.6321023]    x24=0000f9a332ac0036,    x25=0000000000000003
[ 7463.6321023]    x26=000000000000007b,    x27=0000f9a33306c180
[ 7463.6321023]    x28=000000000000002e, fp=x29=ffffc0014dc17ed0
[ 7463.6321023] lr=x30=ffffc0000008a864,     sp=ffffc0014dc17ed0
[ 7463.6321023] ------------------------------------------------
[ 7463.6321023] fp ffffc0014dc17ed0 el0_trap_exit() at ffffc0000008a868 netbsd:el0_trap_exit+0x20
[ 7463.6321023] cpu0: End traceback...
Stopped in pid 26315.26315 (make) at    netbsd:cpu_Debugger+0x4:        ret
	2020-08-02T18:17:13.000Z

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: Jared McNeill <jmcneill@invisible.ca>
To: gnats-bugs@netbsd.org
Cc: netbsd-bugs@netbsd.org, maya@netbsd.org
Subject: Re: port-arm/55532: kernel panic with ena on AWS a1.2xlarge
Date: Mon, 3 Aug 2020 10:44:04 -0300 (ADT)

   This message is in MIME format.  The first part should be readable text,
   while the remaining parts are likely unreadable without MIME-aware tools.

 --0-367659264-1596462250=:11865
 Content-Type: text/plain; format=flowed; charset=US-ASCII

 Does this patch help?
 --0-367659264-1596462250=:11865
 Content-Type: text/plain; charset=US-ASCII; name=pr55532.patch
 Content-Transfer-Encoding: BASE64
 Content-ID: <alpine.NEB.2.22.394.2008031044040.11865@performa.invisible.ca>
 Content-Description: 
 Content-Disposition: attachment; filename=pr55532.patch

 RnJvbSBhYjI2ZWMwN2NiMzY0ZWNmNGE1YjMzNmU4NzIxOGUwNTc4ZTQyOThi
 IE1vbiBTZXAgMTcgMDA6MDA6MDAgMjAwMQ0KRnJvbTogSmFyZWQgTWNOZWls
 bCA8am1jbmVpbGxAaW52aXNpYmxlLmNhPg0KRGF0ZTogTW9uLCAzIEF1ZyAy
 MDIwIDEwOjQxOjE0IC0wMzAwDQpTdWJqZWN0OiBbUEFUQ0hdIFRha2Uga2Vy
 bmVsIGxvY2sgdW5sZXNzIE5FVF9NUFNBRkUNCg0KLS0tDQogc3lzL2Rldi9w
 Y2kvaWZfZW5hLmMgfCAyMyArKysrKysrKysrKysrKysrKystLS0tLQ0KIDEg
 ZmlsZSBjaGFuZ2VkLCAxOCBpbnNlcnRpb25zKCspLCA1IGRlbGV0aW9ucygt
 KQ0KDQpkaWZmIC0tZ2l0IGEvc3lzL2Rldi9wY2kvaWZfZW5hLmMgYi9zeXMv
 ZGV2L3BjaS9pZl9lbmEuYw0KaW5kZXggMjNjYzlkODgyZWRhLi5iOWVkYmFh
 ODc1NjIgMTAwNjQ0DQotLS0gYS9zeXMvZGV2L3BjaS9pZl9lbmEuYw0KKysr
 IGIvc3lzL2Rldi9wY2kvaWZfZW5hLmMNCkBAIC0yNywxMyArMjcsMTggQEAN
 CiAgKiAoSU5DTFVESU5HIE5FR0xJR0VOQ0UgT1IgT1RIRVJXSVNFKSBBUklT
 SU5HIElOIEFOWSBXQVkgT1VUIE9GIFRIRSBVU0UNCiAgKiBPRiBUSElTIFNP
 RlRXQVJFLCBFVkVOIElGIEFEVklTRUQgT0YgVEhFIFBPU1NJQklMSVRZIE9G
 IFNVQ0ggREFNQUdFLg0KICAqLw0KKw0KKyNpZmRlZiBfS0VSTkVMX09QVA0K
 KyNpbmNsdWRlICJvcHRfbmV0X21wc2FmZS5oIg0KKyNlbmRpZg0KKw0KKyNp
 bmNsdWRlIDxzeXMvcGFyYW0uaD4NCiAjaW5jbHVkZSA8c3lzL2NkZWZzLmg+
 DQogI2lmIDANCiBfX0ZCU0RJRCgiJEZyZWVCU0Q6IGhlYWQvc3lzL2Rldi9l
 bmEvZW5hLmMgMzMzNDU2IDIwMTgtMDUtMTAgMDk6Mzc6NTRaIG13ICQiKTsN
 CiAjZW5kaWYNCiBfX0tFUk5FTF9SQ1NJRCgwLCAiJE5ldEJTRDogaWZfZW5h
 LmMsdiAxLjI0IDIwMjAvMDMvMDMgMjE6NDI6MzEgamRvbGVjZWsgRXhwICQi
 KTsNCiANCi0jaW5jbHVkZSA8c3lzL3BhcmFtLmg+DQogI2luY2x1ZGUgPHN5
 cy9zeXN0bS5oPg0KICNpbmNsdWRlIDxzeXMvYnVzLmg+DQogI2luY2x1ZGUg
 PHN5cy9lbmRpYW4uaD4NCkBAIC01Niw2ICs2MSwxNCBAQCBfX0tFUk5FTF9S
 Q1NJRCgwLCAiJE5ldEJTRDogaWZfZW5hLmMsdiAxLjI0IDIwMjAvMDMvMDMg
 MjE6NDI6MzEgamRvbGVjZWsgRXhwICQiKQ0KIA0KICNpbmNsdWRlIDxkZXYv
 cGNpL2lmX2VuYXZhci5oPg0KIA0KKyNpZmRlZiBORVRfTVBTQUZFDQorI2Rl
 ZmluZQlXUV9GTEFHUwlXUV9NUFNBRkUNCisjZGVmaW5lCUNBTExPVVRfRkxB
 R1MJQ0FMTE9VVF9NUFNBRkUNCisjZWxzZQ0KKyNkZWZpbmUJV1FfRkxBR1MJ
 MA0KKyNkZWZpbmUJQ0FMTE9VVF9GTEFHUwkwDQorI2VuZGlmDQorDQogLyoq
 KioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioq
 KioqKioqKioqKg0KICAqICBGdW5jdGlvbiBwcm90b3R5cGVzDQogICoqKioq
 KioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioqKioq
 KioqKioqKi8NCkBAIC02NzcsNyArNjkwLDcgQEAgZW5hX3NldHVwX3R4X3Jl
 c291cmNlcyhzdHJ1Y3QgZW5hX2FkYXB0ZXIgKmFkYXB0ZXIsIGludCBxaWQp
 DQogDQogCS8qIEFsbG9jYXRlIHdvcmtxdWV1ZXMgKi8NCiAJaW50IHJjID0g
 d29ya3F1ZXVlX2NyZWF0ZSgmdHhfcmluZy0+ZW5xdWV1ZV90cSwgImVuYV90
 eF9lbnEiLA0KLQkgICAgZW5hX2RlZmVycmVkX21xX3N0YXJ0LCB0eF9yaW5n
 LCAwLCBJUExfTkVULCBXUV9QRVJDUFUgfCBXUV9NUFNBRkUpOw0KKwkgICAg
 ZW5hX2RlZmVycmVkX21xX3N0YXJ0LCB0eF9yaW5nLCAwLCBJUExfTkVULCBX
 UV9QRVJDUFUgfCBXUV9GTEFHUyk7DQogCWlmICh1bmxpa2VseShyYyAhPSAw
 KSkgew0KIAkJZW5hX3RyYWNlKEVOQV9BTEVSVCwNCiAJCSAgICAiVW5hYmxl
 IHRvIGNyZWF0ZSB3b3JrcXVldWUgZm9yIGVucXVldWUgdGFza1xuIik7DQpA
 QCAtODgzLDcgKzg5Niw3IEBAIGVuYV9zZXR1cF9yeF9yZXNvdXJjZXMoc3Ry
 dWN0IGVuYV9hZGFwdGVyICphZGFwdGVyLCB1bnNpZ25lZCBpbnQgcWlkKQ0K
 IA0KIAkvKiBBbGxvY2F0ZSB3b3JrcXVldWVzICovDQogCWludCByYyA9IHdv
 cmtxdWV1ZV9jcmVhdGUoJnJ4X3JpbmctPmNtcGxfdHEsICJlbmFfcnhfY29t
 cCIsDQotCSAgICBlbmFfZGVmZXJyZWRfcnhfY2xlYW51cCwgcnhfcmluZywg
 MCwgSVBMX05FVCwgV1FfUEVSQ1BVIHwgV1FfTVBTQUZFKTsNCisJICAgIGVu
 YV9kZWZlcnJlZF9yeF9jbGVhbnVwLCByeF9yaW5nLCAwLCBJUExfTkVULCBX
 UV9QRVJDUFUgfCBXUV9GTEFHUyk7DQogCWlmICh1bmxpa2VseShyYyAhPSAw
 KSkgew0KIAkJZW5hX3RyYWNlKEVOQV9BTEVSVCwNCiAJCSAgICAiVW5hYmxl
 IHRvIGNyZWF0ZSB3b3JrcXVldWUgZm9yIFJYIGNvbXBsZXRpb24gdGFza1xu
 Iik7DQpAQCAtMzc5NSwxMiArMzgwOCwxMiBAQCBlbmFfYXR0YWNoKGRldmlj
 ZV90IHBhcmVudCwgZGV2aWNlX3Qgc2VsZiwgdm9pZCAqYXV4KQ0KIAkJZ290
 byBlcnJfaWZwX2ZyZWU7DQogCX0NCiANCi0JY2FsbG91dF9pbml0KCZhZGFw
 dGVyLT50aW1lcl9zZXJ2aWNlLCBDQUxMT1VUX01QU0FGRSk7DQorCWNhbGxv
 dXRfaW5pdCgmYWRhcHRlci0+dGltZXJfc2VydmljZSwgQ0FMTE9VVF9GTEFH
 Uyk7DQogCWNhbGxvdXRfc2V0ZnVuYygmYWRhcHRlci0+dGltZXJfc2Vydmlj
 ZSwgZW5hX3RpbWVyX3NlcnZpY2UsIGFkYXB0ZXIpOw0KIA0KIAkvKiBJbml0
 aWFsaXplIHJlc2V0IHRhc2sgcXVldWUgKi8NCiAJcmMgPSB3b3JrcXVldWVf
 Y3JlYXRlKCZhZGFwdGVyLT5yZXNldF90cSwgImVuYV9yZXNldF9lbnEiLA0K
 LQkgICAgZW5hX3Jlc2V0X3Rhc2ssIGFkYXB0ZXIsIDAsIElQTF9ORVQsIFdR
 X1BFUkNQVSB8IFdRX01QU0FGRSk7DQorCSAgICBlbmFfcmVzZXRfdGFzaywg
 YWRhcHRlciwgMCwgSVBMX05FVCwgV1FfUEVSQ1BVIHwgV1FfRkxBR1MpOw0K
 IAlpZiAodW5saWtlbHkocmMgIT0gMCkpIHsNCiAJCWVuYV90cmFjZShFTkFf
 QUxFUlQsDQogCQkgICAgIlVuYWJsZSB0byBjcmVhdGUgd29ya3F1ZXVlIGZv
 ciByZXNldCB0YXNrXG4iKTsNCg==

 --0-367659264-1596462250=:11865--

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55532 CVS commit: [netbsd-9] src/sys/dev/pci
Date: Wed, 5 Aug 2020 14:59:42 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Aug  5 14:59:42 UTC 2020

 Modified Files:
 	src/sys/dev/pci [netbsd-9]: if_ena.c

 Log Message:
 Pull up following revision(s) (requested by jmcneill in ticket #1038):

 	sys/dev/pci/if_ena.c: revision 1.25

 PR port-arm/55532: kernel panic with ena on AWS a1.2xlarge

 Do not mark callout and workqueues as mpsafe unless the NET_MPSAFE option
 is present.


 To generate a diff of this commit:
 cvs rdiff -u -r1.15.2.2 -r1.15.2.3 src/sys/dev/pci/if_ena.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Tue, 11 Aug 2020 07:10:53 +0000
State-Changed-Why:
Fixed?


State-Changed-From-To: feedback->closed
State-Changed-By: maya@NetBSD.org
State-Changed-When: Tue, 11 Aug 2020 17:47:51 +0000
State-Changed-Why:
fixed by jared, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.